# stock-ta

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKILL.md  ai_research.py  analyze.py  discord_post.py  docker-compose.example.yml  log_config.py  pyproject.toml  report.py  requirements.txt  server.py  stock-ta.sh  ta_core.py
.github/workflows/: docker.yml
references/: indicators.md
scripts/: analyze_stock.py
